--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,6 @@
   "env": {
     "MONGODB_URI": "@mongodb_uri",
     "JWT_SECRET": "@jwt_secret",
-    "NEXT_PUBLIC_SOCKET_HOST": "@socket_host",
-    "ML_SERVER_URL": "@ml_server_url"
+    "NEXT_PUBLIC_SOCKET_HOST": "@socket_host"
   }
 }
