--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -8,10 +8,11 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
