feat: implement Cloudinary image uploads for profiles, experiments, and attachments
- Install Cloudinary SDK and formidable for file uploads
- Create /api/upload route with Cloudinary integration:
  * File type and size validation (5MB max, JPEG/PNG/GIF/WEBP)
  * Automatic image optimization and resizing
  * Secure upload with authentication
  * Returns Cloudinary public_id and secure_url

- Create reusable useImageUpload hook:
  * Type-safe image upload functionality
  * Loading states and error handling
  * Progress tracking

- Create ImageUpload component:
  * Drag-and-drop support
  * Click to upload
  * Image preview
  * Loading and error states
  * Responsive design

- Update MongoDB models:
  * User: Add profileImage field (CloudinaryImage)
  * Experiment: Add image and attachments fields (CloudinaryImage[])
  * Store only Cloudinary URLs, not raw files

- Update API routes:
  * /api/auth/me: Support PATCH for profile updates with images
  * /api/experiments: Support image field in create/update
  * /api/experiments/[id]: Support image field in updates

- Create Profile page (/profile):
  * Profile image upload
  * Name editing
  * Auto-save on image upload

- Integrate image upload into experiment creation:
  * Optional experiment image upload
  * Stored in Cloudinary and saved to MongoDB

- Add Cloudinary environment variables to .env.example:
  * NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME
  * NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET
  * CLOUDINARY_API_KEY
  * CLOUDINARY_API_SECRET

- Add profile link to navigation

All images stored in Cloudinary, only URLs stored in MongoDB.

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,10 @@ NODE_ENV=development
 # Optional: Redis URL (for caching and pub/sub at scale)
 # REDIS_URL=redis://localhost:6379
 # Or for Upstash: redis://default:<password>@<host>:<port>
+
+# Cloudinary Configuration
+# Get these from https://cloudinary.com/console
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your-cloud-name
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=your-upload-preset
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
