--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@types/formidable": "^3.4.6",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
