--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@types/formidable": "^3.4.6",
     "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.25",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
